Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77154

ASSERT failure on launch when launching the app in a different window

XMLWordPrintable

    • macOS
    • a34b0855f160add13d08c21715dd6853094c23e7 (qt/qtbase/5.12)

      Description:

      When you launch the application in a different window than you build it (for example if XCode is on display 1 and the app is launched on display 2), there is an assertion failure on startup:
      **

      ASSERT failure in QCocoaWindow: "Resulting NSScreen should match the requested NSScreen", file sources/qtbase/src/plugins/platforms/cocoa/qcocoawindow.mm, line 1564
      

      In order to be able to launch the application in a different window than the window XCode resides, you can right-click your Qt application target in the dock and select Assign To -> [your other display]. This will allow you to change the display that the target application appears in.

       

      Repro Steps: 

      • set your target application to launch on the display that XCode is NOT inhabiting.
      • launch the application from XCode (and possibly any IDE, but I only tested with XCode)

       

        For Gerrit Dashboard: QTBUG-77154
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            nipatrick Patrick ONeil
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes